# jupyterhub-ansiblespawner

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: workflow.yml
ansiblespawner/: __init__.py  ansiblespawner.py
ci/: Vagrantfile  podman_ubuntu.sh  setup.sh  ubuntu-dependencies.sh  ubuntu1804.sh
examples/aws-ec2/: .gitignore  README.md  ansible.cfg  assume-policy-ec2.json  create.yml  destroy.yml  inventory.yml.j2  jupyterhub-deploy.yml  jupyterhub-destroy.yml  jupyterhub-provision.yml  jupyterhub-singleuser.service.j2  jupyterhub.service  jupyterhub_config.py  localhost.yml  policy-ec2-allow-all.json  poll.yml  requirements.yml  update.yml
examples/aws-ec2/ci/: dummy-id_rsa.pem  dummy-id_rsa.pub  patch-entrypoint.sh  run-localstack.sh
examples/aws-ec2/molecule/localstack-provision/: molecule.yml  verify.yml
examples/aws-ec2/tests/: run-localstack.sh
examples/docker/: create.yml  destroy.yml  inventory.yml.j2  poll.yml  requirements.yml  update.yml
examples/jupyterhub/: playbook.yml  requirements.yml
examples/openstack/: ansible.cfg  create.yml  destroy.yml  inventory.yml.j2  jupyterhub-singleuser.service.j2  jupyterhub_config.py  poll.yml  update.yml
examples/podman/: connection-podman-mount.patch  create.yml  destroy.yml  inventory.yml.j2  poll.yml  requirements.yml  update.yml
tests/: conftest.py  test_spawner.py  test_unit.py  unit_empty_playbook.yml  unit_inventory.yml  unit_playbook.yml
(+6 files in other folders)
