# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=61", "setuptools_scm>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "ansiblespawner"
dynamic = ["version"]
authors = [
  {name = "Simon Li"},
]
description = "Spawn JupyterHub single user notebook servers using Ansible"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
keywords = ["jupyterhub", "spawner"]
classifiers = [
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "jupyterhub>=4",
  "ansible>=2.10",
  "ansible-runner>=2",
  "traitlets>=5",
]

[project.entry-points."jupyterhub.spawners"]
ansible = "ansiblespawner:AnsibleSpawner"

[project.urls]
Homepage = "https://github.com/manics/jupyterhub-ansiblespawner"
Source = "https://github.com/manics/jupyterhub-ansiblespawner"
Tracker = "https://github.com/manics/jupyterhub-ansiblespawner/issues"

[tool.setuptools.packages.find]
include = ["ansiblespawner*"]

[tool.setuptools_scm]
version_file = "ansiblespawner/_version.py"
